# ProjetE2

./: CMakeLists.txt  Readme.txt  Texture_syn.lyx  Texture_synthesis.cpp  script.sh
inc/: common.h  kmeans.h  solve_opt.h
src/: common.cpp  kmeans.cpp  solve_opt.cpp  testneighborhood.cpp
